# bookocr

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/bookocr/: __init__.py  _char_ocr.py  _json.py  _service.py  _stats.py  config.py  model.h5  ocr.py  stats_config.py
